# CMakeMultiDepAppTemplate

./: .gitmodules  CMakeLists.txt  README.md  Targoman.cmake
src/: main.cpp
